crates/ruff_python_parser/tests/snapshots/invalid_syntax@f_string_unclosed_lbrace.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/f_string_unclosed_lbrace.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..38,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..4,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 0..4,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 0..4,
                                            node_index: NodeIndex(None),
                                            elements: [
                                                Interpolation(
                                                    InterpolatedElement {
                                                        range: 2..3,
                                                        node_index: NodeIndex(None),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 3..3,
                                                                id: Name(""),
                                                                ctx: Invalid,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 5..14,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 5..14,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 5..14,
                                            node_index: NodeIndex(None),
                                            elements: [
                                                Interpolation(
                                                    InterpolatedElement {
                                                        range: 7..13,
                                                        node_index: NodeIndex(None),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 8..11,
                                                                id: Name("foo"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: Repr,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 15..23,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 15..23,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 15..23,
                                            node_index: NodeIndex(None),
                                            elements: [
                                                Interpolation(
                                                    InterpolatedElement {
                                                        range: 17..22,
                                                        node_index: NodeIndex(None),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 18..21,
                                                                id: Name("foo"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: Some(
                                                            DebugText {
                                                                leading: "",
                                                                trailing: "=",
                                                            },
                                                        ),
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 24..28,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 24..28,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 24..28,
                                            node_index: NodeIndex(None),
                                            elements: [
                                                Interpolation(
                                                    InterpolatedElement {
                                                        range: 26..27,
                                                        node_index: NodeIndex(None),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 27..27,
                                                                id: Name(""),
                                                                ctx: Invalid,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 29..37,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 29..37,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 29..37,
                                            node_index: NodeIndex(None),
                                            elements: [
                                                Interpolation(
                                                    InterpolatedElement {
                                                        range: 33..34,
                                                        node_index: NodeIndex(None),
                                                        expression: Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 34..34,
                                                                id: Name(""),
                                                                ctx: Invalid,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: true,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | f"{"
  |    ^ Syntax Error: Expected an expression
2 | f"{foo!r"
3 | f"{foo="
  |


  |
1 | f"{"
2 | f"{foo!r"
  |         ^ Syntax Error: f-string: expecting `}`
3 | f"{foo="
4 | f"{"
  |


  |
1 | f"{"
2 | f"{foo!r"
3 | f"{foo="
  |        ^ Syntax Error: f-string: expecting `}`
4 | f"{"
5 | f"""{"""
  |


  |
2 | f"{foo!r"
3 | f"{foo="
4 | f"{"
  |    ^ Syntax Error: Expected an expression
5 | f"""{"""
  |


  |
3 | f"{foo="
4 | f"{"
5 | f"""{"""
  |      ^^^ Syntax Error: Expected an expression
  |
